opam-version: "1.2"
version: "dev"
maintainer: "The Savonet Team <savonet-users@lists.sourceforge.net>"
authors: "The Savonet Team <savonet-users@lists.sourceforge.net>"
homepage: "https://github.com/savonet/ocaml-shine"
bug-reports: "https://github.com/savonet/ocaml-shine/issues"
license: "GPL-2.0"
dev-repo: "https://github.com/savonet/ocaml-shine.git"
build: [
  ["./bootstrap"]
  ["./configure" "--prefix=%{prefix}%"] { os != "darwin" }
  ["./configure" "OCAMLFLAGS=-cclib -L/usr/local/lib" "--prefix=%{prefix}%"] { os = "darwin" }
  [make "clean"]
  [make]
]
install: [make "install"]
remove: ["ocamlfind" "remove" "shine"]
depends: [
  "ocamlfind" {build}
]
depexts: [
  [["alpine"] ["shine"]]
  [["centos"] ["libshine-devel"]]
  [["fedora"] ["libshine-devel"]]
  [["opensuse"] ["libshine-devel"]]
  [["debian"] ["libshine-dev"]]
  [["ubuntu"] ["libshine-dev"]]
  [["osx" "homebrew"] ["drfill/liquidsoap/libshine"]]
]
