opam-version: "2.0"
name: "shine"
version: "0.2.1"
maintainer: "The Savonet Team <savonet-users@lists.sourceforge.net>"
authors: "The Savonet Team <savonet-users@lists.sourceforge.net>"
license: "GPL-2.0"
homepage: "https://github.com/savonet/ocaml-shine"
bug-reports: "https://github.com/savonet/ocaml-shine/issues"
synopsis: "Fixed-point MP3 encoder."
description:
  "shine is a super fast mp3 encoding library implemented in fixed-point arithmetic."
depends: [
  "ocaml"
  "ocamlfind" {build}
]
build: [
  ["./bootstrap"] {dev}
  ["./configure" "--prefix=%{prefix}%"] {os != "macos"}
  ["./configure" "OCAMLFLAGS=-cclib -L/usr/local/lib" "--prefix=%{prefix}%"]
    {os = "macos"}
  [make "clean"] {dev}
  [make]
]
install: [make "install"]
depexts: [
  ["shine"] {os-distribution = "alpine"}
  ["libshine-devel"] {os-distribution = "centos"}
  ["libshine-devel"] {os-distribution = "fedora"}
  ["libshine-devel"] {os-distribution = "opensuse"}
  ["libshine-dev"] {os-family = "debian"}
  ["drfill/liquidsoap/libshine"]
    {os = "macos" & os-distribution = "homebrew"}
]
dev-repo: "git+https://github.com/savonet/ocaml-shine.git"
