(library
 (name            shine)
 (public_name     shine)
 (synopsis        "Fixed-point MP3 encoder.")
 (c_names         shine_stubs)
 (c_flags         (:include c_flags.sexp))
 (c_library_flags (:include c_library_flags.sexp)))

(rule
 (targets c_flags.sexp c_library_flags.sexp)
 (deps    (:discover config/discover.exe))
 (action  (run %{discover})))
