(library
 (name shine)
 (public_name shine)
 (synopsis "Fixed-point MP3 encoder.")
 (foreign_stubs
  (language c)
  (names shine_stubs)
  (flags
   (:include c_flags.sexp)))
 (c_library_flags
  (:include c_library_flags.sexp)))

(rule
 (targets c_flags.sexp c_library_flags.sexp)
 (deps
  (:discover config/discover.exe))
 (action
  (run %{discover})))
